[package]
name = "consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["cmake-build"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-0_8"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default = []
kafka = ["dep:rdkafka"]
