[package]
name = "ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
rdkafka = { version = "0.36", optional = true, default-features = false, features = ["cmake-build"] }
pulsar = { version = "6.0", optional = true, default-features = false, features = ["tokio-runtime", "compression"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[features]
default = []
kafka = ["dep:rdkafka"]
pulsar = ["dep:pulsar"]
